--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -3,6 +3,7 @@
     <string name="invoke_error">请求失败。</string>
     <string name="response_error">响应内容不正确。</string>
     <string name="internet_auth_not_granted">请检查您的网络链接权限。</string>
+    <string name="invoke_timeout">链接超时，请稍后再试。</string>
 
     <string name="app_name">鑫宏利业</string>
     <string name="title_navigation_menu_home">主页</string>
@@ -10,4 +11,13 @@
     <string name="title_navigation_menu_1">菜单1</string>
     <string name="title_navigation_menu_2">菜单2</string>
     <string name="title_navigation_menu_3">菜单3</string>
+
+    <string name="get_last_app_version_invoke_error">请求失败，请检查您的网络链接权限。</string>
+
+    <string name="dlg_tip_title">提示</string>
+    <string name="btn_positive_name">确定</string>
+    <string name="btn_negative_name">取消</string>
+
+    <string name="dlg_tip_title_update">有新版本可以更新啦！</string>
+    <string name="btn_positive_name_update">获取</string>
 </resources>
