--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,4 +1,10 @@
 <resources>
+    <string name="error_INTERNAL_SERVER_ERROR">服务器未捕获异常</string>
+    <string name="error_NOT_FOUND">未找到请求地址</string>
+    <string name="error_CONFIG_ERROR">配置错误</string>
+    <string name="error_PARAM_ERROR">参数错误</string>
+    <string name="error_DB_VALIDATE_ERROR">参数错误</string>
+
     <string name="invoke_success">请求成功。</string>
     <string name="invoke_error">请求失败。</string>
     <string name="response_error">响应内容不正确。</string>
