add security center base code

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -51,4 +51,6 @@
     <string name="feedback_result">感谢您的宝贵意见</string>
 
     <string name="title_about">关于</string>
+
+    <string name="title_security_center">安全中心</string>
 </resources>
