--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     <string name="feedback_result">Thanks for your comments</string>
 
     <string name="title_about">about</string>
+
+    <string name="title_security_center">security center</string>
 </resources>
