--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,12 @@
     <string name="invoke_success">invoke success.</string>
     <string name="invoke_error">invoke error!</string>
     <string name="response_error">response error!</string>
-    <string name="internet_auth_not_granted">Please check you internet authority!</string>
+    <string name="internet_auth_not_granted">Please check your internet authority!</string>
     <string name="invoke_timeout">invoke timeout, please wait!</string>
     <string name="invoke_no_more_data">No more data!</string>
     <string name="not_implemented">Please wait for surprise!</string>
     <string name="not_empty">can not empty!</string>
+    <string name="can_not_use_storage">Please check your storage read/write authority!</string>
 
     <string name="app_name">LichKin</string>
     <string name="title_navigation_menu_home">Home</string>
@@ -49,6 +50,9 @@
     <string name="feedback_content_text">Content:</string>
     <string name="feedback_content_hint">Content&#8230;</string>
     <string name="feedback_result">Thanks for your comments</string>
+    <string name="feedback_choose_title">How to choose picture</string>
+    <string name="btn_positive_name_gallery">From Gallery</string>
+    <string name="btn_negative_name_camera">Take a photo</string>
 
     <string name="title_about">about</string>
 
