--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -49,6 +49,7 @@
     <string name="title_feedback">意见反馈</string>
     <string name="feedback_content_text">内容:</string>
     <string name="feedback_content_hint">内容&#8230;</string>
+    <string name="feedback_image_text">选择图片上传:</string>
     <string name="feedback_result">感谢您的宝贵意见</string>
     <string name="feedback_choose_title">如何选择图片？</string>
     <string name="btn_positive_name_gallery">相册</string>
