我的页面使用列表布局，完善动态按钮工具类。公司页面补充标题栏。

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -83,6 +83,7 @@
     <string name="pwd_hint">请输入密码</string>
     <string name="register_pwd_text">密码可由字母、数字、英文符号组成</string>
     <string name="level">等级</string>
+    <string name="sign_in">签到</string>
     <string name="sign_in_success">签到成功</string>
 
     <string name="title_btn_comp_news">新闻</string>
